# urashima

./: .eslintrc.js  .gitignore  .prettierrc.js  Cargo.toml  README.md  build.rs  lerna.json  package.json
libnaru/: Cargo.toml  build.rs  naru.h
libnaru/src/: lib.rs
naru/: Cargo.toml
naru-symbol/: Cargo.toml  build.rs
naru-symbol/src/: lib.rs
naru-wasm/: Cargo.toml
naru-wasm/src/: lib.rs
naru/src/: main.rs
play-naru/: .eslintignore  config-overrides.js  package.json
play-naru/src/: App.tsx  index.tsx
play-naru/src/components/: Capsule.tsx  MainPage.css  MainPage.tsx
src/: arena.rs  capsule.rs  environment.rs  error.rs  eval.rs  expr.rs  lib.rs  program.rs  runtime.rs  statement.rs  testutils.rs
src/data/: convert.rs  function.rs  invoke.rs  mod.rs  num.rs  record.rs  variant.rs
src/eval/: expr.rs  mod.rs
src/expr/: atomic.rs  call.rs  control_flow.rs  mod.rs  operator.rs
src/expr/arena/: impls.rs  mod.rs
src/inst/: mod.rs  translate.rs
src/parser/: mod.rs  syntax.pest
src/ty/: mod.rs
tests/: example.n  helloworld.n  helloworld.yaml  use_pkg.yaml
tests/pkg/: simplemath.yaml
urashima-ast/: Cargo.toml
urashima-ast/src/: error.rs  find.rs  lib.rs  print.rs  program.rs  span.rs  statement.rs
urashima-ast/src/expr/: arena.rs  atomic.rs  block.rs  call.rs  control_flow.rs  function.rs  impls.rs  mod.rs  operator.rs
urashima-ast/src/expr/arena/: impls.rs  mod.rs
urashima-ast/src/parser/: mod.rs  syntax.pest
urashima-ast/src/statement/: impls.rs  mod.rs
urashima-naru-langserver/: Cargo.toml
urashima-naru-langserver/src/: codec.rs  command.rs  handler.rs  main.rs  prelude.rs  workspace.rs
urashima-naru-vscode/: package.json  tsconfig.json
urashima-naru-vscode/src/: extension.ts
urashima-naru-vscode/syntaxes/: naru.tmGrammar.json
urashima-util/: Cargo.toml  build.rs
urashima-util/src/: arena.rs  de.rs  lib.rs  num.rs  pkg.rs  symbol.rs
