[workspace]
members = [
    "libnaru",
    "naru",
    "naru-symbol",
    "urashima-*",
]

[package]
name = "urashima"
description = "Proof-of-concept Runtime for Naru Programming Language"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
chashmap = "2.2"
failure = "0.1.5"
log = "0.4"
naru-symbol = { path = "naru-symbol" }
serde = { version = "1.0.91", features = ["derive"] }
serde_derive_urashima = { git = "https://github.com/Kroisse/serde.git", branch = "derive_urashima" }
serde_yaml = "0.8"
smallvec = "0.6"
urashima-ast = { path = "urashima-ast" }
urashima-util = { path = "urashima-util" }

[dev-dependencies]
serde_json = "1.0.39"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
