[workspace]
members = [
    "libnaru",
    "naru",
    "naru-symbol",
    "urashima-*",
]

[package]
name = "urashima"
description = "Proof-of-concept Runtime for Naru Programming Language"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
deserialize = ["serde_derive_urashima", "serde_yaml", "urashima-ast/deserialize"]

[dependencies]
chashmap = "2.2"
failure = "0.1.5"
lazy_static = "1.3"
log = "0.4"
serde = { version = "1.0.91", features = ["derive"] }
serde_yaml = { version = "0.8", optional = true }
urashima-ast = { path = "urashima-ast" }
urashima-util = { path = "urashima-util" }

[dependencies.serde_derive_urashima]
git = "https://github.com/Kroisse/serde.git"
branch = "derive_urashima"
optional = true

[dev-dependencies]
serde_json = "1.0.39"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
