[package]
name = "urashima-ast"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"

[features]
deserialize = ["serde", "serde_state", "serde_derive_state", "serde_derive", "urashima-util/deserialize"]

[dependencies]
failure = "0.1.5"
lazy_static = "1.3"
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0.91", optional = true }
serde_derive = { version = "1.0.91", optional = true }
serde_state = { version = "0.4", optional = true }
serde_derive_state = { version = "0.4", optional = true }
urashima-util = { path = "../urashima-util" }
