[package]
name = "urashima-naru-langserver"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"

[dependencies]
aho-corasick = "0.7"
bytes = "0.4"
chashmap = "2.2"
env_logger = "0.6"
failure = "0.1.5"
futures-preview = { version = "0.3.0-alpha.16", features = ["async-await", "compat", "nightly"] }
jsonrpc-core = "12.0"
lazy_static = "1.3"
listenfd = "0.3"
log = "0.4"
lsp-types = "0.58"
serde = "1.0.91"
serde_json = "1.0.39"
urashima = { path = ".." }
urashima-ast = { path = "../urashima-ast", features = ["dev"] }
tokio = "0.1.21"
