[package]
name = "urashima-util"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"

[dependencies]
generational-arena = "0.2"
naru-symbol = { path = "../naru-symbol" }
num-bigint = { version = "0.2", features = ["serde"] }
num-traits = "0.2"
serde = "1.0.91"
smallvec = "0.6"
