[package]
name = "urashima-util"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"

[features]
deserialize = ["serde", "serde_state", "num-bigint/serde"]

[dependencies]
generational-arena = { version = "0.2", default-features = false }
num-bigint = "0.2"
num-traits = "0.2"
serde = { version = "1.0.91", default-features = false, optional = true }
serde_state = { version = "0.4", default-features = false, optional = true }
smallvec = "0.6"
string_cache = { version = "0.7", default-features = false }

[build-dependencies]
string_cache_codegen = "0.4"
